<resources>
    <string name="app_name">System76</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="laptops">Laptops</string>
    <string name="desktops">Desktops</string>
    <string name="servers">Servers</string>
    <string name="swag">Swag</string>
    <string name="contact">Contact</string>
    <string name="twitter">Twitter</string>
    <string name="fb">Facebook</string>
    <string name="google_plus">Google Plus</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="system">System</string>
</resources>
